# StructuralDPs

./: CMakeLists.txt  main.cpp
Adapter/: RoundHole.cpp  RoundHole.h  RoundPeg.cpp  RoundPeg.h  RoundShape.cpp  RoundShape.h  SquarePeg.cpp  SquarePeg.h  SquarePegAdapter.cpp  SquarePegAdapter.h
Bridge/: AdvancedRemote.cpp  AdvancedRemote.h  Device.cpp  Device.h  Radio.cpp  Radio.h  Remote.cpp  Remote.h  TV.cpp  TV.h
Composite/: Box.cpp  Box.h  Component.cpp  Component.h  Product.cpp  Product.h
Decorator/: BorderDecorator.cpp  BorderDecorator.h  Decorator.cpp  Decorator.h  ScrollDecorator.cpp  ScrollDecorator.h  TextField.cpp  TextField.h  Widget.cpp  Widget.h
Facade/: Facade.cpp  Facade.h  Subsystem1.cpp  Subsystem1.h  Subsystem2.cpp  Subsystem2.h
Flyweight/: Flyweight.cpp  Flyweight.h  FlyweightFactory.cpp  FlyweightFactory.h  SharedState.cpp  SharedState.h  UniqueState.cpp  UniqueState.h
Proxy/: Cash.cpp  Cash.h  CashProtected.cpp  CashProtected.h  Person.cpp  Person.h
